# vppdispatch

./: Dockerfile  main.py  pyproject.toml  streamlit_app.py
src/vpp_dispatch/: api.py  streamlit_api.py
src/vpp_dispatch/models/: schemas.py  timeseries.py
src/vpp_dispatch/models/assets/: base_asset.py  battery.py  flex_load.py  flex_load_onoff.py  pv.py
src/vpp_dispatch/models/constraints/: power_balance.py
src/vpp_dispatch/models/objectives/: cost_minimisation.py
src/vpp_dispatch/optimisation/: heuristics.py  model_builder.py  solver_manager.py
src/vpp_dispatch/services/: batch_dispatch.py  dispatch_service.py
tests/: test_api.py
