[project]
name = "vpp-dispatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "highspy>=1.14.0",
    "pydantic>=2.13.4",
    "pyomo>=6.10.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
